--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
-# pulumi
-# pulumi-aws
-boto3
+boto3==1.17.112
+botocore==1.20.112
+certifi==2021.10.8
+chardet==4.0.0
+futures==3.4.0
+idna==2.10
+jmespath==0.10.0
+lxml==4.9.0
+mutagen==1.42.0
+numpy==1.16.6
+Pillow==6.2.2
+pysqlcipher3==1.0.4
+python-dateutil==2.8.2
+PyWavelets==1.0.3
+requests==2.27.1
+s3transfer==0.4.2
+scipy==1.2.3
+six==1.16.0
+Unidecode==1.2.0
+urllib3==1.26.9
