--- a/.github/workflows/deploy-pulumi-infra.yml
+++ b/.github/workflows/deploy-pulumi-infra.yml
@@ -6,29 +6,43 @@ on:
   workflow_dispatch:
 
 jobs:
-  pulumi-deploy:
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
+    environment: production # or any environment you've configured
+
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pulumi
+          pip install -r requirements.txt
 
-      - name: Configure Pulumi
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1 # or your preferred region
+
+      - name: Install Pulumi CLI
+        uses: pulumi/setup-pulumi@v2
+
+      - name: Pulumi Stack Select
         run: |
-          pulumi login
+          pulumi stack select dev
+
+      - name: Pulumi Preview
+        run: |
+          pulumi preview
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-      - name: Deploy to dev
-        run: pulumi stack select dev
+      - name: Pulumi Up
+        run: |
           pulumi up --yes
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
