--- a/.github/workflows/deploy-pulumi-infra.yml
+++ b/.github/workflows/deploy-pulumi-infra.yml
@@ -28,10 +28,9 @@ jobs:
           pulumi login
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-      - uses: pulumi/actions@v4
-        with:
-          command: up
-          stack-name: dev
-          upsert: true # Create the stack if it doesn't exist
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      - name: Pulumi Stack Select
+        run: |
+          pulumi stack select dev
+      - name: Pulumi Up
+        run: |
+          pulumi up --yes
